Fix input bug in draggable component on Firefox

--- a/app/components/data-table/data_table.css
+++ b/app/components/data-table/data_table.css
@@ -77,3 +77,7 @@
 	display: inline-block;
 	cursor: text;
 }
+
+[draggable=true] {
+	-khtml-user-drag: element;
+}
